// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with notifications lays out correctly on larger screens 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={null}
  data={
    Array [
      Object {
        "node": Object {
          "artists": "Jean-Michel Basquiat",
          "artworks": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "title": "Anti-Product Postcard",
                },
              },
            ],
          },
          "image": Object {
            "resized": Object {
              "url": "cloudfront.url",
            },
          },
          "summary": "1 Work Added",
        },
      },
      Object {
        "node": Object {
          "artists": "Ana Mendieta",
          "artworks": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "title": "Corazón de Roca con Sangre",
                },
              },
              Object {
                "node": Object {
                  "title": "Butterfly",
                },
              },
            ],
          },
          "image": Object {
            "resized": Object {
              "url": "cloudfront.url",
            },
          },
          "summary": "2 Works Added",
        },
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "marginHorizontal": 20,
            "marginTop": 20,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "cloudfront.url",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#f8f8f8",
                "borderRadius": 20,
                "height": 40,
                "marginRight": 10,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "center",
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "fontFamily": "AvantGardeGothicITC",
                  },
                  Object {
                    "fontSize": 12,
                  },
                ]
              }
            >
              JEAN-MICHEL BASQUIAT
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontSize": 17,
                  },
                  Object {
                    "color": "#666666",
                    "fontSize": 14,
                    "marginTop": 2,
                  },
                  Object {
                    "fontFamily": "AGaramondPro-Regular",
                  },
                ]
              }
            >
              1 Work Added
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "marginBottom": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              accessibilityLabel="Artworks Content View"
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityLabel="Section 0"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 20,
                      "width": 206.66666666666666,
                    },
                  ]
                }
              />
              <View
                accessibilityLabel="Section 1"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 20,
                      "width": 206.66666666666666,
                    },
                  ]
                }
              />
              <View
                accessibilityLabel="Section 2"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 0,
                      "width": 206.66666666666666,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        px={2}
        style={
          Array [
            Object {
              "paddingLeft": 20,
              "paddingRight": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#E5E5E5",
                "borderStyle": "solid",
                "borderWidth": 1,
                "width": "100%",
              },
            ]
          }
          width="100%"
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "marginHorizontal": 20,
            "marginTop": 20,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "cloudfront.url",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#f8f8f8",
                "borderRadius": 20,
                "height": 40,
                "marginRight": 10,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "center",
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "fontFamily": "AvantGardeGothicITC",
                  },
                  Object {
                    "fontSize": 12,
                  },
                ]
              }
            >
              ANA MENDIETA
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontSize": 17,
                  },
                  Object {
                    "color": "#666666",
                    "fontSize": 14,
                    "marginTop": 2,
                  },
                  Object {
                    "fontFamily": "AGaramondPro-Regular",
                  },
                ]
              }
            >
              2 Works Added
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "marginBottom": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              accessibilityLabel="Artworks Content View"
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityLabel="Section 0"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 20,
                      "width": 206.66666666666666,
                    },
                  ]
                }
              />
              <View
                accessibilityLabel="Section 1"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 20,
                      "width": 206.66666666666666,
                    },
                  ]
                }
              />
              <View
                accessibilityLabel="Section 2"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 0,
                      "width": 206.66666666666666,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`with notifications lays out correctly on small screens 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={null}
  data={
    Array [
      Object {
        "node": Object {
          "artists": "Jean-Michel Basquiat",
          "artworks": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "title": "Anti-Product Postcard",
                },
              },
            ],
          },
          "image": Object {
            "resized": Object {
              "url": "cloudfront.url",
            },
          },
          "summary": "1 Work Added",
        },
      },
      Object {
        "node": Object {
          "artists": "Ana Mendieta",
          "artworks": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "title": "Corazón de Roca con Sangre",
                },
              },
              Object {
                "node": Object {
                  "title": "Butterfly",
                },
              },
            ],
          },
          "image": Object {
            "resized": Object {
              "url": "cloudfront.url",
            },
          },
          "summary": "2 Works Added",
        },
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "marginHorizontal": 20,
            "marginTop": 20,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "cloudfront.url",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#f8f8f8",
                "borderRadius": 20,
                "height": 40,
                "marginRight": 10,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "center",
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "fontFamily": "AvantGardeGothicITC",
                  },
                  Object {
                    "fontSize": 12,
                  },
                ]
              }
            >
              JEAN-MICHEL BASQUIAT
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontSize": 17,
                  },
                  Object {
                    "color": "#666666",
                    "fontSize": 14,
                    "marginTop": 2,
                  },
                  Object {
                    "fontFamily": "AGaramondPro-Regular",
                  },
                ]
              }
            >
              1 Work Added
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "marginBottom": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              accessibilityLabel="Artworks Content View"
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityLabel="Section 0"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <View
                accessibilityLabel="Section 1"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 0,
                      "width": 20,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        px={2}
        style={
          Array [
            Object {
              "paddingLeft": 20,
              "paddingRight": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#E5E5E5",
                "borderStyle": "solid",
                "borderWidth": 1,
                "width": "100%",
              },
            ]
          }
          width="100%"
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "marginHorizontal": 20,
            "marginTop": 20,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "cloudfront.url",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#f8f8f8",
                "borderRadius": 20,
                "height": 40,
                "marginRight": 10,
                "width": 40,
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "center",
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 12,
                  },
                  Object {
                    "fontFamily": "AvantGardeGothicITC",
                  },
                  Object {
                    "fontSize": 12,
                  },
                ]
              }
            >
              ANA MENDIETA
            </Text>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "fontSize": 17,
                  },
                  Object {
                    "color": "#666666",
                    "fontSize": 14,
                    "marginTop": 2,
                  },
                  Object {
                    "fontFamily": "AGaramondPro-Regular",
                  },
                ]
              }
            >
              2 Works Added
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "marginBottom": 20,
              "marginTop": 20,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              accessibilityLabel="Artworks Content View"
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityLabel="Section 0"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 20,
                      "width": 20,
                    },
                  ]
                }
              />
              <View
                accessibilityLabel="Section 1"
                style={
                  Array [
                    Object {
                      "flexDirection": "column",
                    },
                    Object {
                      "marginRight": 0,
                      "width": 20,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`without notifications lays out correctly on larger screens 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={null}
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "height": "100%",
            "justifyContent": "center",
            "marginLeft": 20,
            "marginRight": 20,
            "paddingBottom": 30,
            "paddingLeft": 30,
            "paddingRight": 30,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
              "fontSize": 30,
              "marginLeft": 10,
              "marginRight": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        You haven’t followed any artists yet.
      </Text>
      <Text
        numberOfLines={0}
        style={
          Array [
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
              "fontSize": 18,
              "marginTop": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        Follow artists to see new works that have been added to Artsy
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`without notifications lays out correctly on small screens 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={null}
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "height": "100%",
            "justifyContent": "center",
            "marginLeft": 20,
            "marginRight": 20,
            "paddingBottom": 30,
            "paddingLeft": 30,
            "paddingRight": 30,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
              "fontSize": 30,
              "marginLeft": 10,
              "marginRight": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        You haven’t followed any artists yet.
      </Text>
      <Text
        numberOfLines={0}
        style={
          Array [
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
              "fontSize": 18,
              "marginTop": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        Follow artists to see new works that have been added to Artsy
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
